# platform_development

./: Android.bp  cherry_pick_justifications.txt  groups  project.config
ide/clion/art/: CMakeLists.txt
vndk/tools/CPP2C/: Android.bp  CFunctionConverter.h  CMakeLists.txt  CPP2C.cpp  CTypeMetadataConverter.cpp  CTypeMetadataConverter.h  Globals.h  MyASTConsumer.cpp  Options.h  Resources.cpp  Resources.h
vndk/tools/CPP2C/src/: CFunctionConverter.cpp  CFunctionConverter.h  CTypeMetadata.cpp  CTypeMetadata.h  CTypeMetadataConverter.cpp  CTypeMetadataConverter.h  ClassMatchHandler.cpp  ClassMatchHandler.h  Cpp2c.cpp  CustomTypeManager.cpp  CustomTypeManager.h  Globals.h  HeaderConverterFrontendActionFactory.cpp  HeaderConverterFrontendActionFactory.h  HeaderConverterOptions.h  ICustomTypeBase.h  MyASTConsumer.cpp  MyASTConsumer.h  MyFrontendAction.cpp  MyFrontendAction.h  Options.h  OutputStreams.cpp  OutputStreams.h  Resources.cpp  Utils.cpp  Utils.h
vndk/tools/CPP2C/src/converters/: FunctionConverter.cpp  FunctionConverter.h  TypeConverter.cpp  TypeMetadata.cpp  TypeMetadata.h
vndk/tools/CPP2C/src/customTypes/: HwuiSpType.cpp  HwuiSpType.h  SharedPtrType.cpp  SharedPtrType.h  SkiaSkspType.cpp  SkiaSkspType.h  StdSharedPtrType.cpp  StdSharedPtrType.h  StdUniquePtrType.cpp  StdUniquePtrType.h
vndk/tools/CPP2C/test/: classesToWrap.txt  test.py  utils.py
vndk/tools/CPP2C/test/expected/: CppClass.cpp  CppClass.h  CppStdTest.cpp  CppStdTest.h  CppTest.cpp  CppTest.h  Foo.cpp  Foo.h  HwuiPointers.cpp  HwuiPointers.h  SkiaPointers.cpp  SkiaPointers.h
vndk/tools/CPP2C/test/input/: CppClass.h  CppStdTest.h  CppTest.h  Foo.h  HwuiPointers.h  SkiaPointers.h
vndk/tools/CPP2C/test/utils/: utils.py
vndk/tools/header-checker/: Android.bp  CMakeLists.txt  README.md  ast_test.cpp
vndk/tools/header-checker/Documentation/: Development.md
vndk/tools/header-checker/android/: build-prebuilts.sh  envsetup.sh  update_clang-tools.sh
vndk/tools/header-checker/dlopen-map-gen/src/: dlopen_map_gen.cpp
vndk/tools/header-checker/header-abi-diff/src/: abi_diff.cpp  abi_diff.h  abi_diff_wrappers.cpp  abi_diff_wrappers.h  header_abi_diff.cpp
vndk/tools/header-checker/header-abi-dumper/src/: ABI.proto  QualTypeNames.cpp  QualTypeNames.h  abi_wrappers.cpp  abi_wrappers.h  ast_processing.cpp  ast_processing.h  ast_util.h  diagnostic_consumer.cpp  diagnostic_consumer.h  fake_decl_source.cpp  fake_decl_source.h  frontend_action.cpp  frontend_action.h  frontend_action_factory.cpp  frontend_action_factory.h  header_checker.cpp  header_checker.h
vndk/tools/header-checker/header-abi-linker/src/: header_abi_linker.cpp  header_linker.cpp
vndk/tools/header-checker/header-abi-util/include/: abi_diff_helpers.h  exported_symbol_set.h  header_abi_util.h  ir_representation.h  ir_representation_json.h  ir_representation_protobuf.h  string_utils.h  version_script_parser.h
vndk/tools/header-checker/header-abi-util/src/: abi_diff_helpers.cpp  collect_exported_headers.cpp  exported_symbol_set.cpp  ir_representation.cpp  ir_representation_json.cpp  ir_representation_protobuf.cpp  so_file_parser.cpp  string_utils.cpp  version_script_parser.cpp  version_script_parser_test.cpp
vndk/tools/header-checker/merge-abi-diff/src/: merge_abi_diff.cpp
vndk/tools/header-checker/proto/: CMakeLists.txt  abi_diff.proto  abi_dump.proto
vndk/tools/header-checker/soong/: Android.bp  headerchecker.go
vndk/tools/header-checker/src/diff/: abi_diff.cpp  abi_diff.h  header_abi_diff.cpp
vndk/tools/header-checker/src/diff_merge/: merge_abi_diff.cpp
vndk/tools/header-checker/src/dumper/: abi_wrappers.cpp  abi_wrappers.h  ast_processing.cpp  ast_processing.h  ast_util.h  header_checker.cpp  header_checker.h
vndk/tools/header-checker/src/linker/: header_abi_linker.cpp  merged_module.cpp  merged_module.h  module_merger.cpp  module_merger.h
vndk/tools/header-checker/src/repr/: ir_representation.cpp  ir_representation.h  ir_representation_internal.h
vndk/tools/header-checker/src/repr/json/: converter.cpp  converter.h  ir_dumper.cpp  ir_reader.cpp
vndk/tools/header-checker/src/repr/symbol/: version_script_parser.cpp
vndk/tools/header-checker/src/utils/: collect_exported_headers.cpp  collect_exported_headers_test.cpp  config_file.h  source_path_util.h  source_path_utils.cpp  source_path_utils.h  source_path_utils_test.cpp
vndk/tools/header-checker/tests/: Android.bp  example1.cpp  example1.h  example2.h  gen_all.py  module.py  test.py  utils.py
vndk/tools/header-checker/tests/abi_dumps/weak_symbols/: new_libtest.lsdump  old_libtest.lsdump
vndk/tools/header-checker/tests/expected/: enum.h  example1.cpp  example1.h  example2.h  example3.h  example4.h  func_decl_no_args.h  func_decl_one_arg.h  func_decl_one_arg_ret.h  func_decl_two_args.h
vndk/tools/header-checker/tests/input/: enum.h  example1.h  example2.h  test_stub.c
vndk/tools/header-checker/tests/integration/c_and_cpp/: source2.c
vndk/tools/header-checker/tests/integration/merge_multi_definition/: map.txt
vndk/tools/header-checker/tests/integration/version_script_example/: Android.bp  example-no-mytag.lsdump  example-no-private.lsdump  example.lsdump  regenerate.sh
vndk/tools/header-checker/tests/reference_dumps/arm/: libc_and_cpp.so.lsdump  libc_and_cpp_whole_static.so.lsdump  libc_and_cpp_with_opaque_ptr_a.so.lsdump  libc_and_cpp_with_opaque_ptr_b.so.lsdump  libc_and_cpp_with_unused_struct.so.lsdump  libc_and_cpp_without_Cfunction.so.lsdump  libgolden_cpp.so.lsdump  libgolden_cpp_add_function.so.lsdump  libgolden_cpp_add_global_variable.so.lsdump  libgolden_cpp_change_function_access.so.lsdump  libgolden_cpp_enum_diff.so.lsdump  libgolden_cpp_enum_extended.so.lsdump  libgolden_cpp_fabricated_function_ast_removed.so.lsdump  libgolden_cpp_function_pointer.so.lsdump  libgolden_cpp_function_pointer_parameter_added.so.lsdump  libgolden_cpp_inheritance_type_changed.so.lsdump  libgolden_cpp_internal_private_struct.so.lsdump  libgolden_cpp_json.so.lsdump  (+11 more)
vndk/tools/header-checker/utils/: create_reference_dumps.py  generate_csv_abi_report.py  utils.py
(+1305 files in other folders)
