cmake_minimum_required(VERSION 3.6)
project(native)


add_subdirectory(imgdiag/imgdiagd-arm64-android)
add_subdirectory(imgdiag/imgdiag-arm64-android)
add_subdirectory(dex2oat/art_dex2oat_tests-arm64-android)
add_subdirectory(sigchainlib/libsigchain_dummy-arm64-android)
add_subdirectory(dalvikvm/dalvikvm-arm64-android)
add_subdirectory(runtime/openjdkjvm/libopenjdkjvmd-arm64-android)
add_subdirectory(runtime/openjdkjvm/libopenjdkjvm-arm64-android)
add_subdirectory(runtime/libartd-arm64-android)
add_subdirectory(runtime/openjdkjvmti/libopenjdkjvmti-arm64-android)
add_subdirectory(runtime/openjdkjvmti/libopenjdkjvmtid-arm64-android)
add_subdirectory(runtime/libart-runtime-gtest-arm64-android)
add_subdirectory(runtime/simulator/libartd-simulator-arm64-android)
add_subdirectory(runtime/simulator/libart-simulator-arm64-android)
add_subdirectory(runtime/art_runtime_compiler_tests-arm64-android)
add_subdirectory(runtime/libart-arm64-android)
add_subdirectory(runtime/art_runtime_tests-arm64-android)
add_subdirectory(dexoptanalyzer/art_dexoptanalyzer_tests-arm64-android)
add_subdirectory(benchmark/libartbenchmark-arm64-android)
add_subdirectory(disassembler/libart-disassembler-arm64-android)
add_subdirectory(disassembler/libartd-disassembler-arm64-android)
add_subdirectory(dexlist/dexlist-arm64-android)
add_subdirectory(dexlist/art_dexlist_tests-arm64-android)
add_subdirectory(cmdline/art_cmdline_tests-arm64-android)
add_subdirectory(compiler/libart-compiler-arm64-android)
add_subdirectory(compiler/libart-compiler-gtest-arm64-android)
add_subdirectory(compiler/art_compiler_tests-arm64-android)
add_subdirectory(compiler/libartd-compiler-arm64-android)
add_subdirectory(oatdump/oatdumpd-arm64-android)
add_subdirectory(oatdump/oatdump-arm64-android)
add_subdirectory(oatdump/art_oatdump_tests-arm64-android)
add_subdirectory(profman/art_profman_tests-arm64-android)
add_subdirectory(dexlayout/libartd-dexlayout-arm64-android)
add_subdirectory(dexlayout/dexlayout-arm64-android)
add_subdirectory(dexlayout/libart-dexlayout-arm64-android)
add_subdirectory(dexlayout/art_dexlayout_tests-arm64-android)
add_subdirectory(dexdump/dexdump2-arm64-android)
add_subdirectory(dexdump/art_dexdump_tests-arm64-android)
